// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildDocumentation should build documentation for class  1`] = `
"<!-- Generated automatically. Update this documentation by updating the source code. -->

# Documentation

## C1

### m1()

## C2

### m2()

## C3

### m3()
"
`;

exports[`buildDocumentation should build documentation for functions  1`] = `
"<!-- Generated automatically. Update this documentation by updating the source code. -->

# Documentation

## functionDeclaration()

## varFunctionExpression()

## letFunctionExpression()

## constFunctionExpression()

## constArrowFunction()

## exportConstArrowFunction()

## exportDefaultConstArrowFunction()
"
`;

exports[`buildDocumentation should handle optional method in interface, issue #66 1`] = `
"<!-- Generated automatically. Update this documentation by updating the source code. -->

# Documentation
"
`;

exports[`buildDocumentation should not fail when faced with \`new\` in type declaration, issue #59 1`] = `
"<!-- Generated automatically. Update this documentation by updating the source code. -->

# Documentation

## getClockClass()

> TODO: update markdown renderer #59

get clock class

<div class=\\"method-list\\">
  <table>
    <thead>
      <tr>
        <th class=\\"title\\">RETURN VALUE</th>
        <th></th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class=\\"param\\">
          <code>new</code>
        </td>
        <td>
            <div class=\\"function-type\\">function(<code>hour</code>: number, <code>minute</code>: number): any</div>
        </td>
      </tr>
      <tr>
        <td class=\\"param\\">
          <code>tick</code>
        </td>
        <td>
            <div class=\\"function-type\\">function(): string</div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
"
`;

exports[`buildDocumentation should show readable error from \`documentation.js\` 1`] = `
[SyntaxError: "Documentation" documentation source - Unexpected token, expected , (2:19)
  1 | /** */
> 2 | function fooGood<T extends {
    |                   ^
  3 |   x: number;
  4 | }>(obj: T): T {}]
`;

exports[`buildDocumentation should support jsx syntax 1`] = `
"<!-- Generated automatically. Update this documentation by updating the source code. -->

# Documentation

## MyComponent

### sayHello()

Say Hello

### render()
"
`;
